--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <tomee.version>8.0.8</tomee.version>
 	</properties>
 
 	<build>
@@ -69,17 +70,86 @@
 		<!-- The bean validation API is provided by the JakartaEE container only
 			 during runtime, but not during tests. Thus, we need to include an
 			 implementation. -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.2.0.Final</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 		<!-- Required by org.hibernate.validator.hibernate-validator -->
-		<dependency>
+		<!--<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.el</artifactId>
 			<version>3.0.4</version>
+			<scope>test</scope>
+		</dependency>-->
+		<!-- JAX-RS client implementation -->
+		<!--<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-cdi2-se</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>-->
+		<!--<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-jaxb</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>3.0.2</version>
+			<scope>test</scope>
+		</dependency>-->
+		<!-- Arquillian -->
+		<!--<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<version>1.6.0.Final</version>
+			<scope>test</scope>
+		</dependency>-->
+		<!-- TomEE Embedded Adapter for Arquillian, see https://tomee.apache.org/tomee-8.0/docs/arquillian-available-adapters.html -->
+		<!--<dependency>
+			<groupId>org.apache.tomee</groupId>
+			<artifactId>arquillian-tomee-embedded</artifactId>
+			<version>${tomee.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomee</groupId>
+			<artifactId>tomee-embedded</artifactId>
+			<version>${tomee.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomee</groupId>
+			<artifactId>tomee-webservices</artifactId>
+			<version>${tomee.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomee</groupId>
+			<artifactId>tomee-jaxrs</artifactId>
+			<version>${tomee.version}</version>
+			<scope>test</scope>
+		</dependency>-->
+		<dependency>
+			<groupId>org.apache.tomee</groupId>
+			<artifactId>openejb-cxf-rs</artifactId>
+			<version>${tomee.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
