--- a/service/pom.xml
+++ b/service/pom.xml
@@ -36,6 +36,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<attachClasses>true</attachClasses>
 				</configuration>
 			</plugin>
 		</plugins>
