--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<name>Fasta-Search-Service-Parent</name>
 
 	<modules>
+		<module>models</module>
 		<module>service</module>
 		<module>integration-tests</module>
 	</modules>
