--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -14,7 +14,7 @@
 
 	<packaging>jar</packaging>
 
-	<name>Fasta-Search-Service Integration Tests</name>
+	<name>fasta-search-service integration tests</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,7 +31,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					<encoding>UTF-8</encoding>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
