--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -6,7 +6,7 @@ name: build and publish container image
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
 
   schedule:
     - cron: '32 8 * * 4'
