--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -16,9 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: checkout the code
-        uses: actions/checkout@v2
-      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
@@ -35,6 +32,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: docker
+          context: .
+          file: docker/Dockerfile
           push: true
           tags: ipbhalle/fasta-search-service:latest
