--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,29 @@
 		<module>service</module>
 		<module>integration-tests</module>
 	</modules>
+
+	<profiles>
+        <profile>
+			<id>dependencyCheck</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.owasp</groupId>
+						<artifactId>dependency-check-maven</artifactId>
+						<version>6.5.0</version>
+						<configuration>
+							<failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
