--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.ipb-halle</groupId>
 		<artifactId>fasta-search-service-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>fasta-search-service-it</artifactId>
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>de.ipb-halle</groupId>
 			<artifactId>fasta-search-service-models</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 
 		<!-- REST client -->
