--- a/.github/workflows/maven-dependency-check.yml
+++ b/.github/workflows/maven-dependency-check.yml
@@ -7,6 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Get Date
+      id: get-date
+      run: |
+        echo "::set-output name=date::$(/bin/date +%s)"
+      shell: bash
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-dependencies-check-${{ steps.get-date.outputs.date }}
+        restore-keys: ${{ runner.os }}-maven-dependencies-check-
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
