--- a/models/pom.xml
+++ b/models/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>de.ipb-halle</groupId>
 	<artifactId>fasta-search-service-models</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>fasta-search-service-models</name>
@@ -60,8 +60,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
@@ -98,7 +98,7 @@
 		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
-			<version>2.0.2</version>
+			<version>3.0.2</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -121,16 +121,23 @@
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>6.2.0.Final</version>
+			<version>8.0.0.Final</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- Required by org.hibernate.validator.hibernate-validator -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.el</artifactId>
-			<version>3.0.4</version>
+			<version>4.0.2</version>
 			<scope>test</scope>
 		</dependency>
+
+<dependency>
+    <groupId>jakarta.xml.bind</groupId>
+    <artifactId>jakarta.xml.bind-api</artifactId>
+    <version>4.0.0</version>
+</dependency>
+
 	</dependencies>
 
 	<profiles>
