--- a/models/pom.xml
+++ b/models/pom.xml
@@ -46,6 +46,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <gpg.keyname>fbroda@ipb-halle.de</gpg.keyname>
 	</properties>
 
 	<distributionManagement>
@@ -162,6 +163,7 @@
 								<arg>--pinentry-mode</arg>
 								<arg>loopback</arg>
 							</gpgArguments>
+                                                        <keyname>${gpg.keyname}</keyname>
 						</configuration>
 						<executions>
 							<execution>
